--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -2,14 +2,20 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Favorite Food</title>
+    <title>Get Spooked</title>
   </head>
 
   <body>
-    <h1>Favorite Food</h1>
-    <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
+    <h1>Choose a Door!</h1>
+    <!--<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">-->
 
     <!-- Insert Your Form Below -->
-
+    <form method=POST>
+      <p>Let's choose one of these super cool doors!</p>
+    <input type="radio" name="question1" value="doorone">door uno
+    <input type="radio" name="question1" value="doortwo">door dos
+    <input type="radio" name="question1" value="doorthree">door tres
+    <input type="submit" value="let's get spooky!">
+      </form>
   </body>
 </html>
